# quantumHUD

./: CMakeLists.txt  main.cpp  resources.qrc
RAW_Shanders/tacho_2/: tacho_2.qep
RAW_Shanders/tacho_2/export/: Tacho_2.qml  tacho_2.frag.qsb
RAW_Shanders/tacho_hand/: Tacho_hand.qml  hand.frag.qsb  tacho_hand.qep
view/: Main.qml
view/hndl/: ColorBox.qml
view/tacho/: Tacho.qml
view/theme/: DarkTheme.qml  GoldTheme.qml  ItemTheme.qml  ThemeManager.qml  qmldir
